--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@vercel/postgres": "^0.8.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
