--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.8.0",
+    "axios": "^1.7.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
